--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -2,6 +2,7 @@
   "name": "cloud-doc",
   "version": "0.1.0",
   "private": true,
+  "main": "main.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -34,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^16.0.6"
   }
 }
