'判定是否开发环境'

--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -37,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "electron": "^16.0.6"
+    "electron": "^16.0.6",
+    "electron-is-dev": "^2.0.0"
   }
 }
