--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -16,7 +16,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"electron .\"  \" npm start \" "
   },
   "eslintConfig": {
     "extends": [
@@ -37,6 +38,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^7.0.0",
     "electron": "^16.0.6",
     "electron-is-dev": "^2.0.0"
   }
