--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"electron .\"  \" npm start \" "
+    "dev": "concurrently \"wait-on http://localhost:3000 && electron .\"  "
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +40,7 @@
   "devDependencies": {
     "concurrently": "^7.0.0",
     "electron": "^16.0.6",
-    "electron-is-dev": "^2.0.0"
+    "electron-is-dev": "^2.0.0",
+    "wait-on": "^6.0.0"
   }
 }
