关闭web端的打开npm start

--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"wait-on http://localhost:3000 && electron .\"  "
+    "dev": "concurrently \"wait-on http://localhost:3000 && electron .\" \" cross-env  BROWSER=none npm start \" "
   },
   "eslintConfig": {
     "extends": [
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
+    "cross-env": "^7.0.3",
     "electron": "^16.0.6",
     "electron-is-dev": "^2.0.0",
     "wait-on": "^6.0.0"
