--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -13,10 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
+    "easymde": "^2.16.0",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-simplemde-editor": "^5.0.2",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
