--- a/cloud-doc/package.json
+++ b/cloud-doc/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "easymde": "^2.16.0",
+    "electron-store": "^8.0.1",
     "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
